# polyrhythmic

./: CMakeLists.txt  README.md
include/: audio_decoder.h  play_audio.h  playlist.h
src/: audio_decoder.c  main.c  play_audio.c  playlist.c
tests/: test_playlist.c  test_utils.h
